# PicoMusicController

./: .gitignore  GenProject.bat  LICENSE  README.md  premake5.lua
PicoMusicController/: SpotifyCalls.cpp  SpotifyCalls.h
PicoMusicController/source/: App.cpp  App.h  AuthServer.cpp  AuthServer.h  PicoMusicController.cpp  Serial.cpp  Serial.h  SpotifyAPI.cpp  SpotifyAPI.h
PicoMusicController/source/Spotify/: AuthServer.cpp  AuthServer.h  CPPify.h  SpotifyAPI.cpp  SpotifyAPI.h  SpotifyCalls.cpp  SpotifyCalls.h
PicoMusicController/source/Window/: WindowsWindow.cpp  WindowsWindow.h
PicoMusicControllerApp/source/: App.cpp  App.h  PicoMusicController.cpp  Serial.cpp  Serial.h
PicoMusicControllerApp/source/Spotify/: AuthServer.h  SpotifyCalls.cpp  SpotifyCalls.h
PicoMusicControllerApp/source/Window/: WindowsWindow.h
PicoMusicControllerUSB/: Buttons.h  CMakeLists.txt  Display.h  PicoMusicControllerUSB.cpp  VolumeDial.h  cdc.h  usb_descriptors.cpp
